Move to new structure

--- a/test/Soenneker.Utils.Runtime.Tests/Soenneker.Utils.Runtime.Tests.csproj
+++ b/test/Soenneker.Utils.Runtime.Tests/Soenneker.Utils.Runtime.Tests.csproj
@@ -32,7 +32,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\src\Soenneker.Utils.Runtime.csproj" />
+        <ProjectReference Include="..\..\src\Soenneker.Utils.Runtime.csproj" />
     </ItemGroup>
 
 </Project>
