--- a/src/Soenneker.Utils.Runtime.csproj
+++ b/src/Soenneker.Utils.Runtime.csproj
@@ -48,6 +48,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Soenneker.Extensions.String" Version="3.0.538" />
         <PackageReference Include="Soenneker.Extensions.Task" Version="3.0.103" />
         <PackageReference Include="Soenneker.Utils.AsyncSingleton" Version="3.0.712" />
     </ItemGroup>
