--- a/src/Soenneker.Utils.Runtime.csproj
+++ b/src/Soenneker.Utils.Runtime.csproj
@@ -48,6 +48,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Soenneker.Atomics.NullableBools" Version="4.0.11" />
         <PackageReference Include="Soenneker.Extensions.String" Version="4.0.590" />
         <PackageReference Include="Soenneker.Utils.AsyncSingleton" Version="4.0.743" />
     </ItemGroup>
