--- a/test/Soenneker.Utils.Runtime.Tests/Soenneker.Utils.Runtime.Tests.csproj
+++ b/test/Soenneker.Utils.Runtime.Tests/Soenneker.Utils.Runtime.Tests.csproj
@@ -9,11 +9,7 @@
             <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
     </PropertyGroup>
 
-    <ItemGroup><PackageReference Include="Soenneker.Facts.Local" Version="4.0.551" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-            <PrivateAssets>all</PrivateAssets>
-        </PackageReference><PackageReference Include="xUnit.v3" Version="3.2.2" /></ItemGroup>
+    <ItemGroup><PackageReference Include="Soenneker.Facts.Local" Version="4.0.551" /><PackageReference Include="xUnit.v3" Version="3.2.2" /></ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\Soenneker.Utils.Runtime.csproj" />
