--- a/test/Soenneker.Utils.Runtime.Tests/Soenneker.Utils.Runtime.Tests.csproj
+++ b/test/Soenneker.Utils.Runtime.Tests/Soenneker.Utils.Runtime.Tests.csproj
@@ -7,6 +7,8 @@
         <IsPackable>false</IsPackable>
             <TestingPlatformDotnetTestSupport>true</TestingPlatformDotnetTestSupport>
             <UseMicrosoftTestingPlatformRunner>true</UseMicrosoftTestingPlatformRunner>
+            <TestingPlatformShowTestsFailure>true</TestingPlatformShowTestsFailure>
+
     </PropertyGroup>
 
     <ItemGroup><PackageReference Include="Soenneker.Facts.Local" Version="4.0.551" /><PackageReference Include="xUnit.v3" Version="3.2.2" /></ItemGroup>
