--- a/src/Soenneker.Utils.Runtime.csproj
+++ b/src/Soenneker.Utils.Runtime.csproj
@@ -48,7 +48,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Soenneker.Atomics.NullableBools" Version="4.0.11" />
+        <PackageReference Include="Soenneker.Atomics.ValueNullableBools" Version="4.0.1" />
         <PackageReference Include="Soenneker.Extensions.String" Version="4.0.598" />
         <PackageReference Include="Soenneker.Utils.AsyncSingleton" Version="4.0.745" />
     </ItemGroup>
